crates/mako/src/snapshots/mako__transform_dep_replacer__tests__export_from_replace.snap
---
source: crates/mako/src/transform_dep_replacer.rs
expression: "transform_code(\"export {x} from 'x'\")"
---
export { x } from "/x/index.js";
