crates/mako/src/snapshots/mako__transform_dep_replacer__tests__replace_top_level_missing_dep_in_try.snap
---
source: crates/mako/src/transform_dep_replacer.rs
expression: "transform_ast_with(&mut ast.ast, &mut visitor)"
---
try {
    require(Object(function makoMissingModule() {
        var e = new Error("Cannot find module 'react'");
        e.code = "MODULE_NOT_FOUND";
        throw e;
    }()));
} catch (e) {}
