crates/mako/src/snapshots/mako__transform_dep_replacer__tests__simple_replace.snap
---
source: crates/mako/src/transform_dep_replacer.rs
expression: "transform_ast_with(&mut ast.ast, &mut visitor)"
---
require("/root/node_modules/react/index.js");
